// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sort toc with files 1`] = `
Array [
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "The Snowflake",
            },
          ],
          "depth": 1,
          "type": "heading",
        },
      ],
      "type": "root",
    },
    "kind": "note",
    "name": "snowflake",
    "path": Array [
      Object {
        "name": "snowflake",
        "scope": "static",
      },
    ],
  },
  Object {
    "context": Object {
      "sortKey": "a",
    },
    "name": "apples",
  },
  Object {
    "context": Object {
      "sortKey": "b",
    },
    "name": "carrot",
  },
  Object {
    "context": Object {
      "sortKey": "c",
    },
    "name": "bananas",
  },
]
`;

exports[`sort toc with files absolute path 1`] = `
Array [
  Object {
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "The Snowflake",
            },
          ],
          "depth": 1,
          "type": "heading",
        },
      ],
      "type": "root",
    },
    "kind": "note",
    "name": "snowflake",
    "path": Array [
      Object {
        "name": "snowflake",
        "scope": "static",
      },
    ],
  },
  Object {
    "context": Object {
      "sortKey": "a",
    },
    "name": "apples",
  },
  Object {
    "context": Object {
      "sortKey": "b",
    },
    "name": "carrot",
  },
  Object {
    "context": Object {
      "sortKey": "c",
    },
    "name": "bananas",
  },
]
`;

exports[`sort toc with files absolute path 2`] = `
Array [
  Object {
    "context": Object {
      "sortKey": "a",
    },
    "memberof": "classB",
    "name": "apples",
  },
  Object {
    "context": Object {
      "sortKey": "c",
    },
    "memberof": "classB",
    "name": "bananas",
  },
  Object {
    "context": Object {
      "sortKey": "b",
    },
    "memberof": "classB",
    "name": "carrot",
  },
]
`;
